Added responsive layout and images

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,8 @@
 <body>
 
   <header id="masthead">
-    <div class="container">
+     <!-- Set responsive columns/rows -->
+    <div class="container" class="col-xs-12">
       <a href="index.html" id="logo">Blake Tompkins</a>
       <!-- Bootstrap Navbar -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
